fix gap between tokenfield and settings button

--- a/app/assets/stylesheets/peptidome.css.less
+++ b/app/assets/stylesheets/peptidome.css.less
@@ -150,7 +150,6 @@ tr.gu-mirror .button {
     margin-top: 10px;
 }
 #genomeSelector .tokenfield {
-    width: 365px !important;
     min-height: 68px;
 }
 #genomeSelector-results tr.genome {
